    - Remove phase prints and comment out DH_VERBOSE, make is verbose enough.
    - Use dpkg architecture.mk fragment instead of ad-hoc variable assignment.
    - Use dh_testdir instead of open-coding it.
    - Use dh_testroot instead of open-coding it.
    - Use dh_clean instead of ad-hoc cleaning.
    - Do not create an upstream source tarball distribution.
    - Remove unused stdenv variable.

 -- Guillem Jover <guillem@debian.org>  Sun, 10 Feb 2019 22:53:54 +0100

acl (2.2.52-3) unstable; urgency=medium

  [ Marco d'Itri ]
  * Non-maintainer upload.
  * Create the /usr/bin/*acl compatibility symlinks in postinst to support
    merged /usr systems. (Closes: #767925)

 -- Anibal Monsalve Salazar <anibal@debian.org>  Sat, 06 Feb 2016 22:10:44 +0000

acl (2.2.52-2) unstable; urgency=medium

  * ACK NMU.
    Closes: #759591.
  * Standards-Version: 3.9.5.
  * Refresh patches.
  * Really remove Luk Claes as uploader.

 -- Anibal Monsalve Salazar <anibal@debian.org>  Mon, 08 Sep 2014 07:29:24 +0100

acl (2.2.52-1.1) unstable; urgency=high

  * Non-maintainer upload to fix the installer.
  * Use default compression for binary packages to fix the debian
    installer (Closes: #751633).  Patch by  Ansgar Burchardt.
  * Remove Luk Claes as uploader on his request (Closes: #748492).

 -- Petter Reinholdtsen <pere@debian.org>  Thu, 28 Aug 2014 21:45:22 +0200

acl (2.2.52-1) unstable; urgency=low

  * New upstream release 2.2.52 
  * Standards Version is 3.9.4
  * Update debian/rules
    Upstream renamed build/ to package/
  * Upstream renamed configure.in to configure.ac and didn't ship it.
    Add 01-configure.in.patch
  * Fix missing ldflags
    Add 02-687535-fix-missing-ldflags.patch
    Patch by Simon Ruderich
    Closes: #687535
  * autoconf update for arm64 building
    Closes: #689610
  * Update debian/watch

 -- Anibal Monsalve Salazar <anibal@debian.org>  Tue, 21 May 2013 09:39:24 +1000

acl (2.2.51-8) unstable; urgency=low

  * Enable hardening build flags 